# Slic3r

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yaml  spinup.sh  structure.md  test.py
docker/: Dockerfile
python/: config.cpp  config.hpp  model.hpp  point.hpp  print.cpp  print.hpp  pyslic3r.hpp
src/: CMakeLists.txt
src/libslic3r/: PrintConfig.cpp
src/python/: config.cpp  config.hpp  model.cpp  model.hpp  point.cpp  print.cpp  pyslic3r.cpp
